# opsready-linux-lab

./: .dockerignore  .gitignore  BRAND.md  BUILD_VALIDATION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LAUNCH_CHECKLIST.md  LICENSE  Makefile  NOTICE.md  PATCH_INSTRUCTIONS.md  README.md  RELEASE_MANIFEST.json  ROADMAP.md  SECURITY.md  START_HERE.md  UPGRADE_NOTES.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml  secrets.toml.example
commercial/: COMMUNITY_PRO_MATRIX.md  LEMON_SQUEEZY_SETUP.md  PRE_LAUNCH_DECISIONS.md  PRICING_DECISION.md  PRODUCT_LISTING_COPY.md  PRO_ROADMAP.md  SELLER_READINESS_CHECKLIST.md  STORE_ACTIVATION_ANSWERS.md
docs/: ARCHITECTURE.md  ASSESSMENT_ENGINE.md  CONTENT_MODEL.md  DEPLOYMENT.md  FEEDBACK_SETUP.md  PRACTICE_TERMINAL.md  PRODUCT_SCOPE.md  TESTING.md
docs/legal/: COMMERCIAL_DISCLOSURE_DRAFT.md  PRIVACY_POLICY_DRAFT.md  REFUND_AND_CANCELLATION_POLICY_DRAFT.md  TERMS_OF_USE_DRAFT.md
opsready_lab/: __init__.py  config.py
opsready_lab/catalog/: __init__.py  commands.py  exercises.py  incidents.py
opsready_lab/services/: __init__.py  commercial.py  (+6 more)
scripts/: check.ps1  check.sh  check_commercial_readiness.py  cleanup_v152.ps1  cleanup_v152.sh  google_sheets_feedback_webhook.gs  init_repository.ps1  init_repository.sh  run_local.ps1  run_local.sh
tests/: test_app_ui.py  test_assessment_engine.py  test_commercial.py  test_execution_trace.py  test_feedback.py  test_guided_output.py  test_package.py  test_practice_terminal.py  test_progress.py  test_training_data.py
(+3 files in other folders)
